--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neuro-Respiration & Fréquences</title>
+    <title>Métamorphosys</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="apple-touch-icon" href="logo.png">
     <style>
@@ -360,10 +360,15 @@
 
     <div class="glass-panel">
         <div class="glass-header">
-            <div class="header-content">
-                <h1 id="appTitle" style="margin: 0; font-size: 1.6rem; text-align: left;">Neuro-Sync</h1>
-                <div id="appSubtitle" class="subtitle" style="margin: 5px 0 0 0; text-align: left; font-size: 0.85rem;">
-                    Binaural Beats & Respiration Consciente</div>
+            <div class="header-content" style="display: flex; align-items: center; gap: 12px;">
+                <img src="logo.png" alt="Métamorphosys Logo" style="width: 48px; height: 48px; object-fit: contain;">
+                <div>
+                    <h1 id="appTitle" style="margin: 0; font-size: 1.5rem; text-align: left; line-height: 1.2;">
+                        Métamorphosys</h1>
+                    <div id="appSubtitle" class="subtitle"
+                        style="margin: 2px 0 0 0; text-align: left; font-size: 0.8rem;">Binaural Beats & Respiration
+                    </div>
+                </div>
             </div>
 
             <div class="lang-switch" onclick="toggleLanguage()">
