fix: rename Binaural Beats to Binaural Frequencies

--- a/index.html
+++ b/index.html
@@ -366,7 +366,8 @@
                     <h1 id="appTitle" style="margin: 0; font-size: 1.5rem; text-align: left; line-height: 1.2;">
                         Métamorphosys</h1>
                     <div id="appSubtitle" class="subtitle"
-                        style="margin: 2px 0 0 0; text-align: left; font-size: 0.8rem;">Binaural Beats & Respiration
+                        style="margin: 2px 0 0 0; text-align: left; font-size: 0.8rem;">Fréquences Binaurales &
+                        Respiration
                     </div>
                 </div>
             </div>
@@ -463,7 +464,7 @@
 
         const TRANSLATIONS = {
             fr: {
-                subtitle: "Binaural Beats & Respiration Consciente",
+                subtitle: "Fréquences Binaurales & Respiration Consciente",
                 modes: {
                     relax: { title: "🌿 Relaxation", desc: "Alpha/Thêta (8Hz)", text: "Cohérence & Relaxation", posture: "🧘 Position : Allongé ou Assis confortablement", info: "Favorise la détente profonde et la cohérence cardiaque. Idéal pour réduire le stress." },
                     focus: { title: "⚡ Concentration", desc: "Bêta (15Hz)", text: "Focus Intense", posture: "🪑 Position : Préférable Assis (dos droit)", info: "Stimule la concentration et la clarté mentale. Aide à rester alerte et productif." },
@@ -482,7 +483,7 @@
                 headphoneWarning: "Utilisez des écouteurs stéréo pour l'effet binaural"
             },
             en: {
-                subtitle: "Binaural Beats & Conscious Breathing",
+                subtitle: "Binaural Frequencies & Conscious Breathing",
                 modes: {
                     relax: { title: "🌿 Relaxation", desc: "Alpha/Theta (8Hz)", text: "Coherence & Relaxation", posture: "🧘 Position: Lying down or Sitting comfortably", info: "Promotes deep relaxation and cardiac coherence. Ideal for reducing stress." },
                     focus: { title: "⚡ Concentration", desc: "Beta (15Hz)", text: "Intense Focus", posture: "🪑 Position: Sitting preferred (straight back)", info: "Stimulates concentration and mental clarity. Helps stay alert and productive." },
