feat: rename app to Nu Frequencies

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Métamorphosys</title>
+    <title>Nu Frequencies</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="apple-touch-icon" href="logo.png">
     <style>
@@ -361,10 +361,10 @@
     <div class="glass-panel">
         <div class="glass-header">
             <div class="header-content" style="display: flex; align-items: center; gap: 12px;">
-                <img src="logo.png" alt="Métamorphosys Logo" style="width: 48px; height: 48px; object-fit: contain;">
+                <img src="logo.png" alt="Nu Frequencies Logo" style="width: 48px; height: 48px; object-fit: contain;">
                 <div>
                     <h1 id="appTitle" style="margin: 0; font-size: 1.5rem; text-align: left; line-height: 1.2;">
-                        Métamorphosys</h1>
+                        Nu Frequencies</h1>
                     <div id="appSubtitle" class="subtitle"
                         style="margin: 2px 0 0 0; text-align: left; font-size: 0.8rem;">Fréquences Binaurales &
                         Respiration
