--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
                     title: "🧠 À Propos",
                     binaural: { title: "🎧 Fréquences Binaurales", text: "Les fréquences binaurales sont créées lorsque deux tons légèrement différents sont joués dans chaque oreille. Votre cerveau perçoit alors une troisième fréquence, égale à la différence entre les deux. Cette technique peut induire différents états mentaux selon la fréquence produite." },
                     effects: { title: "🌊 Effets sur le Cerveau", text: "<strong>Delta (0.5-4 Hz)</strong> : Sommeil profond, régénération<br><strong>Thêta (4-8 Hz)</strong> : Méditation, créativité<br><strong>Alpha (8-14 Hz)</strong> : Relaxation, calme<br><strong>Bêta (14-30 Hz)</strong> : Concentration, alerte<br><strong>Gamma (30+ Hz)</strong> : Cognition élevée, clarté" },
-                    breathing: { title: "🌬️ Respiration Consciente", text: "Ces exercices respiratoires très anciens proviennent du <strong>Pranayama</strong>, une discipline millénaire du Yoga. La cohérence cardiaque a vulgarisé ces techniques ancestrales pour les rendre accessibles au plus grand nombre. La respiration consciente active le système nerveux parasympathique, réduisant le stress et l'anxiété. Le rythme 5s/5s synchronise le cœur et le cerveau pour un état optimal." },
+                    breathing: { title: "🌬️ Respiration Consciente", text: "La respiration consciente est issue des exercices respiratoires très anciens provenant du <strong>Pranayama</strong>, une discipline millénaire du Yoga. La cohérence cardiaque a vulgarisé ces techniques ancestrales pour les rendre accessibles au plus grand nombre. Elle active le système nerveux parasympathique, réduisant le stress et l'anxiété. Le rythme 5s/5s synchronise le cœur et le cerveau pour un état optimal." },
                     cycles: { title: "🔄 Cycles Respiratoires", text: "<strong>Cohérence Cardiaque</strong> : 5s/5s - Équilibre du système nerveux<br><strong>Respiration Carrée</strong> : 4s/4s/4s/4s - Calme et focus<br><strong>4-7-8</strong> : Inspiration 4s, rétention 7s, expiration 8s - Endormissement" },
                     sources: "📚 Sources à venir..."
                 },
@@ -690,7 +690,7 @@
                     title: "🧠 About",
                     binaural: { title: "🎧 Binaural Frequencies", text: "Binaural frequencies are created when two slightly different tones are played in each ear. Your brain perceives a third frequency equal to the difference between the two. This technique can induce different mental states depending on the frequency produced." },
                     effects: { title: "🌊 Effects on the Brain", text: "<strong>Delta (0.5-4 Hz)</strong>: Deep sleep, regeneration<br><strong>Theta (4-8 Hz)</strong>: Meditation, creativity<br><strong>Alpha (8-14 Hz)</strong>: Relaxation, calm<br><strong>Beta (14-30 Hz)</strong>: Concentration, alertness<br><strong>Gamma (30+ Hz)</strong>: High cognition, clarity" },
-                    breathing: { title: "🌬️ Conscious Breathing", text: "These ancient breathing exercises originate from <strong>Pranayama</strong>, a thousand-year-old Yoga discipline. Cardiac coherence has popularized these ancestral techniques to make them accessible to everyone. Conscious breathing activates the parasympathetic nervous system, reducing stress and anxiety. The 5s/5s rhythm synchronizes the heart and brain for an optimal state." },
+                    breathing: { title: "🌬️ Conscious Breathing", text: "Conscious breathing originates from ancient breathing exercises from <strong>Pranayama</strong>, a thousand-year-old Yoga discipline. Cardiac coherence has popularized these ancestral techniques to make them accessible to everyone. It activates the parasympathetic nervous system, reducing stress and anxiety. The 5s/5s rhythm synchronizes the heart and brain for an optimal state." },
                     cycles: { title: "🔄 Breathing Cycles", text: "<strong>Cardiac Coherence</strong>: 5s/5s - Nervous system balance<br><strong>Box Breathing</strong>: 4s/4s/4s/4s - Calm and focus<br><strong>4-7-8</strong>: Inhale 4s, hold 7s, exhale 8s - Fall asleep" },
                     sources: "📚 Sources coming soon..."
                 },
@@ -1141,11 +1141,11 @@
 
             <div class="modal-section">
                 <h3 id="infoBreathingTitle">🌬️ Respiration Consciente</h3>
-                <p id="infoBreathingText">Ces exercices respiratoires très anciens proviennent du
-                    <strong>Pranayama</strong>, une discipline millénaire du Yoga. La cohérence cardiaque a vulgarisé
-                    ces techniques ancestrales pour les rendre accessibles au plus grand nombre. La respiration
-                    consciente active le système nerveux parasympathique, réduisant le stress et l'anxiété. Le rythme
-                    5s/5s synchronise le cœur et le cerveau pour un état optimal.</p>
+                <p id="infoBreathingText">La respiration consciente est issue des exercices respiratoires très anciens
+                    provenant du <strong>Pranayama</strong>, une discipline millénaire du Yoga. La cohérence cardiaque a
+                    vulgarisé ces techniques ancestrales pour les rendre accessibles au plus grand nombre. Elle active
+                    le système nerveux parasympathique, réduisant le stress et l'anxiété. Le rythme 5s/5s synchronise le
+                    cœur et le cerveau pour un état optimal.</p>
             </div>
 
             <div class="modal-section">
