--- a/index.html
+++ b/index.html
@@ -1089,10 +1089,10 @@
     <!-- Footer Navigation -->
     <nav class="footer-nav">
         <button class="footer-btn" onclick="openModal('infoModal')">
-            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-                <circle cx="12" cy="12" r="9"></circle>
-                <path d="M12 16v-4"></path>
-                <path d="M12 8h.01"></path>
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                stroke-linejoin="round">
+                <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path>
+                <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path>
             </svg>
             <span id="footerInfoLabel">Info</span>
         </button>
